# Capstone-SecureNetShare-4

./: CMakeLists.txt  README.md
data/server_files/: test.txt
include/: client.hpp  crypto.hpp  server.hpp  utils.hpp
src/: client.cpp  crypto.cpp  main_client.cpp  main_server.cpp  server.cpp  utils.cpp
